# C-Matrix-Operations-Library

./: .gitignore  CMakeLists.txt  CSRMatrix.cpp  CSRMatrix.h  Matrix.cpp  Matrix.h  Matrix.hpp  Solver.cpp  Solver.h  main.cpp  readme.md  utilities.h  utilities.h.bak
PerformanceTestResults/: charts.docx  dense_performance_tests - BLAS - No Compiler Optimization.txt  dense_performance_tests - no BLAS No Compiler Optimization.txt  perf tests.xlsx
Release/: example_DGESV_rowmajor.iobj  example_DGESV_rowmajor.ipdb
example_DGESV_rowmajor/: example_DGESV_rowmajor.vcxproj
example_DGESV_rowmajor/Release/example_.8A3F4F2C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  example_DGESV_rowmajor.lastbuildstate  example_DGESV_rowmajor.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
example_ZGESV_rowmajor/: example_ZGESV_rowmajor.c  example_ZGESV_rowmajor.vcxproj  example_ZGESV_rowmajor.vcxproj.filters
sampleMatrices/: 3000Sol.txt
test/: test.cpp
